public/global.css
.container {
    max-width: 80rem;
}

html {
    position: fixed;
    width: 100%;
    height: 100vh;
}

body {
    width: 100%;
    height: 100%;
}

button.button-outline {
    background-color: transparent;
    color: #444;
}

button {
    background-color: #444;
    border-color: #444;
}

